# EvoScientist-claude

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
EvoScientist/: EvoScientist.py  __init__.py  backends.py  cli.py  onboard.py  paths.py
agent-manager/: README.md  extract_core.sh  pyproject.toml  register_mcp.sh  restart_dashboard.py  setup_env.sh  start_dashboard_standalone.py
agent-manager/evo_agent_manager/: __init__.py  __main__.py  agent_factory.py  backend.py  dashboard.py  event_bus.py  frontend.py  manager.py  pipeline_bridge.py  registry.py  server.py  utils.py  web_tools.py
agent-manager/evo_agent_manager/evolution/: __init__.py  elo.py  fitness.py  memory.py  meta_agent.py  pipeline.py  scoring.py  strategy.py  tree_search.py  trigger.py  validator.py
agent-manager/evoscientist_core/EvoScientist/: subagent.yaml
agent-manager/evoscientist_core/EvoScientist/llm/: models.py
agent-manager/evoscientist_core/EvoScientist/tools/: __init__.py  execute.py
docs/: MCP_SETUP.md  QUICK_START.md  SKILL_MAP.md
evolve_archive/: evolve_config.json
scripts/: start_dashboard.sh
templates/: ANALYSIS_REPORT_TEMPLATE.md  EXPERIMENT_LOG_TEMPLATE.md  EXPERIMENT_PLAN_TEMPLATE.md  FINAL_REPORT_TEMPLATE.md  MEMORY_TEMPLATE.md  RESEARCH_PROPOSAL_TEMPLATE.md
tests/: test_channel_comprehensive.py  test_llm.py  test_mcp_client.py  test_onboard.py  test_paths.py  test_serve_agent_holder.py  test_thread_selector.py  test_tui_widgets.py
tools/: agent_task.py  bootstrap.py  cell_grid.py  claim_chain.py  models.py  (+23 more)
(+56 files in other folders)
