[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "evo-agent-manager"
version = "0.1.0"
description = "MCP Server wrapping EvoScientist multi-agent system for Claude Code"
requires-python = ">=3.11,<3.14"
dependencies = [
    "deepagents>=0.4.11",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.4.0",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=1.1"]
google = ["langchain-google-genai>=4.2.1"]
search = ["tavily-python"]

[tool.setuptools.packages.find]
include = ["evo_agent_manager*"]
